--- a/templates/example-grid-menu.html
+++ b/templates/example-grid-menu.html
@@ -9,44 +9,32 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='slickgrid/css/slick.columnpicker.css') }}" type="text/css"/>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
   <style>
+.load-medium {
+      color: orange;
+      font-weight: bold;
+    }
 
+    .load-hi {
+      color: red;
+      font-weight: bold;
+    }
+
+    .changed {
+      background: pink;
+    }
+
+    .current-server {
+      border: 1px solid black;
+      background: orange;
+    }
   </style>
 </head>
 <body>
 <div style="position:relative">
-  <div style="width:600px;">
+  <div style="width:100%;">
     <div id="myGrid" style="width:100%;height:500px;"></div>
   </div>
-  <div class="options-panel">
-    &lt;== Top Right Corner
-    <h2>Demonstrates:</h2>
-    <ul>
-      <li>This example demonstrates using the Slick.Controls.GridMenu to add a Grid Menu (hamburger menu on top right of the grid)</li>
-      <li>Possibility to add custom menu items via a simple array provided to the grid options (same concept as the header menu plugin)</li>
-      <li>Includes column picker list.</li>
-      <li>Optional title for the custom menu items (top section)</li>
-      <li>Optional title for the columns list (bottom section)</li>
-      <li>To dismiss the Grid Menu, user can click on the "x" on top right corner or anywhere outside of the Grid Menu</li>
-      <li>Possibility to attach the Grid Menu to an external button (try clicking on the button below).</li>
-      <li>You can also use some events like "onMenuClose()" and to trigger a resize of the columns with "autosizeColumns()" when "forceFitColumns: false"</li>
-      <p>
-        <button id="external-gridmenu" onclick="toggleGridMenu(event)"><img src="/static/slickgrid/images/drag-handle.png"/> Grid Menu</button>
-      </p>
-      <p>
-        Always show vertical scroll (with "alwaysShowVerticalScroll" flag), so that it works with small and large dataset.
-        Not using this flag, might have side effect on the UI with the Grid Menu overlapping with the data in background.
-      </p>
-      <div style="margin-bottom:10px">
-        <button onclick="loadData(15)">15 rows</button>
-        <button onclick="loadData(5000)">5000 rows</button>
-        <button id="toggle-sorting" onclick="toggleSorting(event)">Toggle Sorting</button>
-      </div>
-      <h2>View Source:</h2>
-      <ul>
-          <li><A href="https://github.com/6pac/SlickGrid/blob/master/examples/example-grid-menu.html" target="_sourcewindow"> View the source for this example on Github</a></li>
-      </ul>
-    </ul>
-  </div>
+
 </div>
 
 <script src="{{ url_for('static', filename='slickgrid/js/firebugx.js') }}"></script>
@@ -56,13 +44,15 @@
 <script src="{{ url_for('static', filename='slickgrid/js/slick.interactions.js') }}"></script>
 <script src="{{ url_for('static', filename='slickgrid/js/slick.dataview.js') }}"></script>
 <script src="{{ url_for('static', filename='slickgrid/js/slick.grid.js') }}"></script>
+<script src="{{ url_for('static', filename='slickgrid/js/slick.rowmovemanager.js') }}"></script>
+<script src="{{ url_for('static', filename='slickgrid/js/slick.cellselectionmodel.js') }}"></script>
 <script src="{{ url_for('static', filename='slickgrid/js/slick.columnpicker.js') }}"></script>
 <script src="{{ url_for('static', filename='slickgrid/js/slick.gridmenu.js') }}"></script>
 <script src="{{ url_for('static', filename='slickgrid/js/slick.state.js') }}"></script>
 <script>
   var dataView;
   var grid;
-  var data = [];
+  var data = {{ list | tojson | safe }};
   var columnpicker;
   var gridMenuControl;
 
@@ -72,6 +62,8 @@
     explicitInitialization: true,
     forceFitColumns: false,
     alwaysShowVerticalScroll: true, // this is necessary when using Grid Menu with a small dataset
+    cellHighlightCssClass: "changed",
+    cellFlashingCssClass: "current-server",
     columnPicker: {
       fadeSpeed: 100,
       columnTitle: "Columns",
@@ -99,8 +91,8 @@
       resizeOnShowHeaderRow: true,
     }
   };
+
   var columns = [];
-  var columnFilters = {};
   var sortcol = "id";
   var sortdir = 1;
   const allFields = {{ fields | tojson | safe }}
@@ -125,17 +117,6 @@
       return (x == y ? 0 : (x > y ? 1 : -1));
     }
 
-  function loadData(count) {
-    data = [];
-    for (var i = 0; i < count; i++) {
-      var d = (data[i] = {});
-      d["id"] = i;
-      for (var j = 0; j < columns.length; j++) {
-        d[j] = Math.round(Math.random() * 10);
-      }
-    }
-    dataView.setItems({{ list | tojson | safe }});
-  }
 
   $(function () {
     dataView = new Slick.Data.DataView();
@@ -173,7 +154,7 @@
 
     grid.init();
 
-    dataView.setItems({{ list | tojson | safe }});
+    dataView.setItems(data);
 
     // subscribe to event when column visibility is changed via the menu
     gridMenuControl.onColumnsChanged.subscribe(function(e, args) {
@@ -201,7 +182,38 @@
       });
       sortDataView(sortCols);
     });
+
+    // simulateRealTimeUpdates()
   })
+// function simulateRealTimeUpdates() {
+//     var changes = {};
+//     var numberOfUpdates = Math.round(Math.random() * (data.length / 10));
+//     for (var i = 0; i < numberOfUpdates; i++) {
+//       var server = Math.round(Math.random() * (data.length - 1));
+//       var cpu = Math.round(Math.random() * (columns.length - 1));
+//       var delta = Math.round(Math.random() * 50) - 25;
+//       var col = grid.getColumnIndex("cpu" + cpu);
+//       var val = data[server][col] + delta;
+//       val = Math.max(0, val);
+//       val = Math.min(100, val);
+//
+//       data[server][col] = val;
+//
+//       if (!changes[server]) {
+//         changes[server] = {};
+//       }
+//       console.log(server)
+//       changes[server]["cpu" + cpu] = "changed";
+//
+//       grid.invalidateRow(server);
+//     }
+//
+//     grid.setCellCssStyles(highlight, changes);
+//
+//     grid.render();
+//     setTimeout(simulateRealTimeUpdates, 500);
+//   }
+
 </script>
 </body>
 </html>
