--- a/templates/example-grid-menu.html
+++ b/templates/example-grid-menu.html
@@ -7,8 +7,38 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='slickgrid/css/examples.css') }}" type="text/css"/>
   <link rel="stylesheet" href="{{ url_for('static', filename='slickgrid/css/slick.gridmenu.css') }}" type="text/css"/>
   <link rel="stylesheet" href="{{ url_for('static', filename='slickgrid/css/slick.columnpicker.css') }}" type="text/css"/>
+  <link rel="stylesheet" href="{{ url_for('static', filename='slickgrid/css/slick-default-theme.css') }}" type="text/css"/>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
   <style>
+    *{
+      background-color: black;
+      color: white;
+      font-family: sans-serif;
+      font-size: 14px;
+    }
+    .slick-column-name {
+      color: black;
+      background: greenyellow;
+    }
+    .slick-sort-indicator {
+      background: greenyellow;
+    }
+    .slick-resizable-handle {
+      background: greenyellow;
+    }
+    .slick-gridmenu{
+      background: black;
+    }
+    .slick-header-column {
+      background: greenyellow;
+    }
+    .slick-header-column:hover {
+      background: greenyellow;
+    }
+
+    .slick-cell{
+      padding: 5px;
+    }
 .load-medium {
       color: orange;
       font-weight: bold;
@@ -19,8 +49,15 @@
       font-weight: bold;
     }
 
-    .changed {
+    .open {
       background: pink;
+    }
+    .high {
+      background: greenyellow;
+    }
+    .low {
+      color: white;
+      background: red;
     }
 
     .current-server {
@@ -30,11 +67,10 @@
   </style>
 </head>
 <body>
-<div style="position:relative">
+<div style="position:relative" >
   <div style="width:100%;">
-    <div id="myGrid" style="width:100%;height:500px;"></div>
+    <div id="myGrid" style="width:100%;height:100vh;"></div>
   </div>
-
 </div>
 
 <script src="{{ url_for('static', filename='slickgrid/js/firebugx.js') }}"></script>
@@ -62,8 +98,10 @@
     explicitInitialization: true,
     forceFitColumns: false,
     alwaysShowVerticalScroll: true, // this is necessary when using Grid Menu with a small dataset
+    editable: false,
     cellHighlightCssClass: "changed",
     cellFlashingCssClass: "current-server",
+    enableAddRow: false,
     columnPicker: {
       fadeSpeed: 100,
       columnTitle: "Columns",
@@ -123,6 +161,7 @@
     grid = new Slick.Grid("#myGrid", dataView, allFields, options);
     columnpicker = new Slick.Controls.ColumnPicker(columns, grid, options);
     gridMenuControl = new Slick.Controls.GridMenu(columns, grid, options);
+    simulateRealTimeUpdates()
 
     var statePersistor = new Slick.State({
       cid: 'sample-grid',
@@ -183,36 +222,36 @@
       sortDataView(sortCols);
     });
 
-    // simulateRealTimeUpdates()
+
   })
-// function simulateRealTimeUpdates() {
-//     var changes = {};
-//     var numberOfUpdates = Math.round(Math.random() * (data.length / 10));
-//     for (var i = 0; i < numberOfUpdates; i++) {
-//       var server = Math.round(Math.random() * (data.length - 1));
-//       var cpu = Math.round(Math.random() * (columns.length - 1));
-//       var delta = Math.round(Math.random() * 50) - 25;
-//       var col = grid.getColumnIndex("cpu" + cpu);
-//       var val = data[server][col] + delta;
-//       val = Math.max(0, val);
-//       val = Math.min(100, val);
-//
-//       data[server][col] = val;
-//
-//       if (!changes[server]) {
-//         changes[server] = {};
-//       }
-//       console.log(server)
-//       changes[server]["cpu" + cpu] = "changed";
-//
-//       grid.invalidateRow(server);
-//     }
-//
-//     grid.setCellCssStyles(highlight, changes);
-//
-//     grid.render();
-//     setTimeout(simulateRealTimeUpdates, 500);
-//   }
+function simulateRealTimeUpdates() {
+    var changes = {};
+    var numberOfUpdates = Math.round(Math.random() * (data.length / 10));
+    for (var i = 0; i < numberOfUpdates; i++) {
+
+      var server = Math.round(Math.random() * (data.length - 1));
+      var cpu = Math.round(Math.random() * (30 - 15) + 15);
+
+      data[server]['open']=cpu
+      data[server]['high']=cpu+1
+      data[server]['low']=cpu-1
+      console.log(data[server])
+
+      if (!changes[server]) {
+        changes[server] = {};
+      }
+      changes[server][15] = "open";
+      changes[server][16] = "high";
+      changes[server][17] = "low";
+
+      grid.invalidateRow(server);
+    }
+
+    grid.setCellCssStyles("highlight", changes);
+
+    grid.render();
+    setTimeout(simulateRealTimeUpdates, 500);
+  }
 
 </script>
 </body>
